--- a/.devcontainer/humble_base/Dockerfile.humble
+++ b/.devcontainer/humble_base/Dockerfile.humble
@@ -12,6 +12,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     python3-rosdep \
     python3-vcstool \
     iproute2 \
+    ros-humble-joint-state-publisher-gui \
     && rm -rf /var/lib/apt/lists/*
     
 # create a non-root user
@@ -40,6 +41,11 @@ RUN groupadd --gid ${USER_GID} ${USERNAME} \
 RUN apt-get update && apt-get install -y --no-install-recommends \
     ros-humble-desktop=0.10.0-1* \
     && rm -rf /var/lib/apt/lists/*
+
+RUN apt-get update && apt-get install -y sudo \
+ && usermod -aG sudo ros_user \
+ && echo "ros_user ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/ros_user \
+ && chmod 0440 /etc/sudoers.d/ros_user
 
 COPY .devcontainer/humble_base/entrypoint.humble.sh /entrypoint.humble.sh
 RUN chmod +x /entrypoint.humble.sh
