--- a/.devcontainer/isaac_dev/Dockerfile.isaac
+++ b/.devcontainer/isaac_dev/Dockerfile.isaac
@@ -5,8 +5,7 @@ SHELL ["/bin/bash", "-lc"]
 
 # Install Gazebo
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    gazebo \
-    ros-humble-gazebo-ros-pkgs \
-    ros-humble-gazebo-ros2-control \
+    ros-humble-ros-gz \
+    ros-humble-gz-ros2-control \
  && rm -rf /var/lib/apt/lists/*
 
