start joystick integration

--- a/.devcontainer/humble_base/devcontainer.json
+++ b/.devcontainer/humble_base/devcontainer.json
@@ -13,6 +13,7 @@
     "--gpus=all",
     "--net=host",
     "--ipc=host",
+    "--device=/dev/input",
 	  "--volume", "/tmp/.X11-unix:/tmp/.X11-unix:rw"
   ],
 
