--- a/.devcontainer/isaac_dev/Dockerfile.isaac
+++ b/.devcontainer/isaac_dev/Dockerfile.isaac
@@ -7,5 +7,8 @@ SHELL ["/bin/bash", "-lc"]
 RUN apt-get update && apt-get install -y --no-install-recommends \
     ros-humble-ros-gz \
     ros-humble-gz-ros2-control \
+    ros-humble-ros2-controllers \
+    ros-humble-controller-manager \
+    ros-humble-gz-ros2-control \
  && rm -rf /var/lib/apt/lists/*
 
