--- a/.devcontainer/humble_base/devcontainer.json
+++ b/.devcontainer/humble_base/devcontainer.json
@@ -10,11 +10,15 @@
   "initializeCommand": "xhost + || true",
 
   "runArgs": [
-    "--gpus=all",
+    "--gpus", "all",
     "--net=host",
     "--ipc=host",
     "--device=/dev/input",
-	  "--volume", "/tmp/.X11-unix:/tmp/.X11-unix:rw"
+	  "--volume", "/tmp/.X11-unix:/tmp/.X11-unix:rw",
+
+    "--env", "NVIDIA_VISIBLE_DEVICES=all",
+    "--env", "NVIDIA_DRIVER_CAPABILITIES=all",
+    "--env", "QT_X11_NO_MITSHM=1"
   ],
 
   "workspaceMount": "source=${localWorkspaceFolder}/ros2_src,target=/home/ros_user/ros2_ws/src,type=bind,consistency=cached",
