--- a/.devcontainer/humble_base/Dockerfile.humble
+++ b/.devcontainer/humble_base/Dockerfile.humble
@@ -22,6 +22,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     ros-humble-ros2controlcli \
     ros-humble-ros-ign-bridge \
     ros-humble-joy-linux \
+    ros-humble-foxglove-bridge \
     && rm -rf /var/lib/apt/lists/*
     
 # create a non-root user
