--- a/.devcontainer/isaac_dev/Dockerfile.isaac
+++ b/.devcontainer/isaac_dev/Dockerfile.isaac
@@ -10,6 +10,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     ros-humble-ros2-controllers \
     ros-humble-controller-manager \
     ros-humble-gz-ros2-control \
+    ros-humble-foxglove-bridge \
  && rm -rf /var/lib/apt/lists/*
 
 RUN mkdir -p /home/triton-server \
