--- a/ros2_src/drivers/roboclaw/package.xml
+++ b/ros2_src/drivers/roboclaw/package.xml
@@ -4,7 +4,7 @@
   <name>roboclaw_driver</name>
   <version>0.0.0</version>
   <description>ROS2 Control hardware interface for RoboClaw motor controller</description>
-  <maintainer email="">ros_user</maintainer>
+  <maintainer email="todo@gmail.com">ros_user</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
