create arm moveit config

--- a/.devcontainer/humble_base/Dockerfile.humble
+++ b/.devcontainer/humble_base/Dockerfile.humble
@@ -24,6 +24,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     ros-humble-joy-linux \
     ros-humble-foxglove-bridge \
     ros-humble-foxglove-msgs \
+    ros-humble-moveit \
     && rm -rf /var/lib/apt/lists/*
     
 # create a non-root user
