--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ros2_src/roboclaw/libroboclaw"]
 	path = ros2_src/roboclaw/libroboclaw
 	url = https://github.com/Achllle/libroboclaw.git
+[submodule "ros2_src/zed-ros2-wrapper"]
+	path = ros2_src/zed-ros2-wrapper
+	url = https://github.com/stereolabs/zed-ros2-wrapper.git
