--- a/.devcontainer/humble_base/Dockerfile.humble
+++ b/.devcontainer/humble_base/Dockerfile.humble
@@ -1,39 +1,87 @@
-# generated from docker_images_ros2/create_ros_image.Dockerfile.em
-FROM ros:humble-ros-core-jammy
+FROM nvcr.io/nvidia/cuda:11.8.0-devel-ubuntu22.04
 
-SHELL ["/bin/bash", "-lc"]
+ARG UBUNTU_MAJOR=22
+ARG UBUNTU_MINOR=04
+ARG CUDA_MAJOR=11
+ARG CUDA_MINOR=8
+ARG CUDA_PATCH=0
+ARG ZED_SDK_MAJOR=4
+ARG ZED_SDK_MINOR=2
+ARG ZED_SDK_PATCH=3
 
-# install bootstrap tools
-RUN apt-get update && apt-get install --no-install-recommends -y \
-    build-essential \
-    git \
-    python3-colcon-common-extensions \
-    python3-colcon-mixin \
-    python3-rosdep \
-    python3-vcstool \
-    iproute2 \
-    ros-humble-joint-state-publisher-gui \
-    ros-humble-xacro \
-    ros-humble-ros-gz \
-    ros-humble-gz-ros2-control \
-    ros-humble-ros2-controllers \
-    ros-humble-controller-manager \
-    ros-humble-gz-ros2-control \
-    ros-humble-ros2controlcli \
-    ros-humble-ros-ign-bridge \
-    ros-humble-joy-linux \
-    && rm -rf /var/lib/apt/lists/*
-    
 # create a non-root user
 ARG USERNAME=ros_user
 ARG USER_UID=1000
 ARG USER_GID=1000
 
-# bootstrap rosdep
-RUN rosdep init && \
-  rosdep update --rosdistro $ROS_DISTRO
+ARG ROS2_DIST=humble 
+ARG DEBIAN_FRONTEND=noninteractive
 
-# setup colcon mixin and metadata
+ENV NVIDIA_DRIVER_CAPABILITIES \
+    ${NVIDIA_DRIVER_CAPABILITIES:+$NVIDIA_DRIVER_CAPABILITIES,}compute,video,utility
+    
+# Disable apt-get warnings
+RUN apt-get update || true && apt-get install -y --no-install-recommends apt-utils dialog curl && \
+  rm -rf /var/lib/apt/lists/*
+
+ENV ZED_SDK_URL="https://download.stereolabs.com/zedsdk/${ZED_SDK_MAJOR}.${ZED_SDK_MINOR}.${ZED_SDK_PATCH}/cu${CUDA_MAJOR}/ubuntu${UBUNTU_MAJOR}"
+
+# Check that this SDK exists
+RUN echo "SDK link: $ZED_SDK_URL"
+RUN if [ "$(curl -L -I "${ZED_SDK_URL}" -o /dev/null -s -w '%{http_code}\n' | head -n 1)" = "200" ]; then \
+        echo "The URL points to something."; \
+    else \
+        echo "The URL does not point to a .run file or the file does not exist."; \
+        exit 1; \
+    fi
+
+
+ENV TZ=Europe/Paris
+
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone && \ 
+  apt-get update && \
+  apt-get install --yes lsb-release wget less udev sudo build-essential cmake python3 python3-dev python3-pip python3-wheel git jq libopencv-dev libpq-dev zstd usbutils && \    
+  rm -rf /var/lib/apt/lists/*
+
+############ Install ROS2 ############
+
+# Set and Check Locale
+RUN apt-get update || true && \
+  apt-get install --no-install-recommends -y locales && \
+  locale-gen en_US en_US.UTF-8 && \
+  update-locale LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8 && \
+  export LANG=en_US.UTF-8 && \
+  locale  # verify settings && \
+  rm -rf /var/lib/apt/lists/*
+
+# Setup Sources
+RUN apt-get update || true && \
+  apt-get install --no-install-recommends -y software-properties-common && \
+  add-apt-repository universe && \
+  apt-get install -y curl && \
+  curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg && \
+  echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null && \
+  rm -rf /var/lib/apt/lists/*
+
+# Install ROS 2 Base packages and Python dependencies
+RUN apt-get update || true && \
+  apt-get install --no-install-recommends -y \
+  ros-${ROS2_DIST}-ros-base \
+  python3-flake8-docstrings \
+  python3-pip \
+  python3-pytest-cov \
+  ros-dev-tools && \
+  pip3 install \
+  argcomplete \
+  numpy \
+  empy \
+  lark && \
+  rm -rf /var/lib/apt/lists/*
+
+
+
+# Initialize rosdep
+RUN rosdep init && rosdep update --rosdistro $ROS2_DIST
 RUN colcon mixin add default \
       https://raw.githubusercontent.com/colcon/colcon-mixin-repository/master/index.yaml && \
     colcon mixin update && \
@@ -41,20 +89,93 @@ RUN colcon mixin add default \
       https://raw.githubusercontent.com/colcon/colcon-metadata-repository/master/index.yaml && \
     colcon metadata update
 
-RUN groupadd --gid ${USER_GID} ${USERNAME} \
-    && useradd --uid ${USER_UID} --gid ${USER_GID} -m -s /bin/bash ${USERNAME} \
-    && mkdir -p /home/${USERNAME}/ros2_ws/src \
-    && chown -R ${USERNAME}:${USERNAME} /home/${USERNAME}/ros2_ws
+#RUN groupadd --gid ${USER_GID} ${USERNAME} \
+    #&& useradd --uid ${USER_UID} --gid ${USER_GID} -m -s /bin/bash ${USERNAME} \
+    #&& mkdir -p /home/${USERNAME}/ros2_ws/src \
+    #&& mkdir -p /home/${USERNAME}/Documents/ZED \
+    #&& chown -R ${USERNAME}:${USERNAME} /home/${USERNAME}/ros2_ws \
+    #&& chown -R ${USERNAME}:${USERNAME} /home/${USERNAME}/Documents \
+    #&& chmod -R o+rx /usr/local/lib/python3.10/dist-packages \
+    #&& chown -R ${USERNAME}:${USERNAME} /usr/local/lib/python3.10/dist-packages
 
-# install ros2 packages
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    ros-humble-desktop=0.10.0-1* \
-    && rm -rf /var/lib/apt/lists/*
+  ros-${ROS2_DIST}-desktop=0.10.0-1* \
+  && rm -rf /var/lib/apt/lists/*
 
-RUN apt-get update && apt-get install -y sudo \
- && usermod -aG sudo ros_user \
- && echo "ros_user ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/ros_user \
- && chmod 0440 /etc/sudoers.d/ros_user
+RUN apt-get update && apt-get install --no-install-recommends -y \
+  build-essential \
+  git \
+  python3-colcon-common-extensions \
+  python3-colcon-mixin \
+  python3-rosdep \
+  python3-vcstool \
+  iproute2 \
+  ros-humble-joint-state-publisher-gui \
+  ros-humble-xacro \
+  ros-humble-ros-gz \
+  ros-humble-gz-ros2-control \
+  ros-humble-ros2-controllers \
+  ros-humble-controller-manager \
+  ros-humble-gz-ros2-control \
+  ros-humble-ros2controlcli \
+  ros-humble-ros-ign-bridge \
+  ros-humble-joy-linux \
+  ros-humble-zed-msgs \
+  ros-humble-nmea-msgs \
+  && rm -rf /var/lib/apt/lists/*
+
+# Install the ZED SDK
+RUN echo "CUDA Version $CUDA_VERSION" > /usr/local/cuda/version.txt
+
+#create a virtual environment for the ZED SDK and ROS2 packages
+RUN apt-get update && apt-get install --no-install-recommends -y \
+python3-opencv \ 
+python3.10-venv \
+&& rm -rf /var/lib/apt/lists/*
+
+#RUN python3 -m venv /opt/venv
+#ENV PATH="/opt/venv/bin:$PATH"
+
+# Setup the ZED SDK
+RUN apt-get update -y || true && \
+  apt-get install --no-install-recommends dialog bash-completion lsb-release wget less udev sudo  build-essential cmake zstd python3 python3-pip libpng-dev libgomp1 -y && \
+  python3 -m pip install --upgrade pip; python3 -m pip install numpy opencv-python-headless && \
+  chmod -R o+rx /usr/local/lib/python3.10/dist-packages && \
+  #chown -R ${USERNAME}:${USERNAME} /usr/local/lib/python3.10/dist-packages && \
+  wget -q -O ZED_SDK_Linux_Ubuntu.run ${ZED_SDK_URL} && \
+  chmod +x ZED_SDK_Linux_Ubuntu.run && \
+  ./ZED_SDK_Linux_Ubuntu.run -- silent  skip_cuda && \
+  ln -sf /lib/x86_64-linux-gnu/libusb-1.0.so.0 /usr/lib/x86_64-linux-gnu/libusb-1.0.so && \
+  rm ZED_SDK_Linux_Ubuntu.run && \
+  rm -rf /var/lib/apt/lists/*
+
+
+# Make /usr/local/zed readable and accessible for ros_user
+RUN chmod o+rx /usr
+RUN chmod -R o+rx /usr/local/zed
+
+# Install the ZED ROS2 Wrapper
+ENV ROS_DISTRO ${ROS2_DIST}
+
+WORKDIR /home/ros_user/ros2_ws/
+
+COPY ../ros2_src ./src
+
+RUN /bin/bash -c "source /opt/ros/$ROS_DISTRO/setup.bash && \
+  apt-get update -y || true && rosdep update && \
+  rosdep install --from-paths src --ignore-src -r -y && \
+  colcon build --symlink-install --cmake-args=-DCMAKE_BUILD_TYPE=Release --packages-select zed_components" && \
+  rm -rf /var/lib/apt/lists/*
+  #colcon build --parallel-workers $(nproc) --symlink-install \
+  #--event-handlers console_direct+ --base-paths src \
+  #--cmake-args ' -DCMAKE_BUILD_TYPE=Release' \
+  #' -DCMAKE_LIBRARY_PATH=/usr/local/cuda/lib64/stubs' \
+  #' -DCMAKE_CXX_FLAGS="-Wl,--allow-shlib-undefined"' " && \
+
+#RUN apt-get update && apt-get install -y sudo \
+# && usermod -aG sudo ros_user \
+# && echo "ros_user ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/ros_user \
+# && chmod 0440 /etc/sudoers.d/ros_user
 
 COPY .devcontainer/humble_base/entrypoint.humble.sh /entrypoint.humble.sh
 RUN chmod +x /entrypoint.humble.sh
