change version of zedsdk submodule to 5.1.0

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ros2_src/zed-ros2-wrapper"]
 	path = ros2_src/zed-ros2-wrapper
 	url = https://github.com/stereolabs/zed-ros2-wrapper.git
+[submodule "ros2_src/zed-ros2-examples"]
+	path = ros2_src/zed-ros2-examples
+	url = https://github.com/stereolabs/zed-ros2-examples.git
