--- a/.devcontainer/humble_base/Dockerfile.humble
+++ b/.devcontainer/humble_base/Dockerfile.humble
@@ -1,13 +1,13 @@
-FROM nvcr.io/nvidia/cuda:11.8.0-devel-ubuntu22.04
+FROM nvidia/cuda:13.0.0-devel-ubuntu22.04
 
 ARG UBUNTU_MAJOR=22
 ARG UBUNTU_MINOR=04
-ARG CUDA_MAJOR=11
-ARG CUDA_MINOR=8
+ARG CUDA_MAJOR=13
+ARG CUDA_MINOR=0
 ARG CUDA_PATCH=0
-ARG ZED_SDK_MAJOR=4
-ARG ZED_SDK_MINOR=2
-ARG ZED_SDK_PATCH=3
+ARG ZED_SDK_MAJOR=5
+ARG ZED_SDK_MINOR=1
+ARG ZED_SDK_PATCH=0
 
 # create a non-root user
 ARG USERNAME=ros_user
@@ -36,12 +36,6 @@ RUN if [ "$(curl -L -I "${ZED_SDK_URL}" -o /dev/null -s -w '%{http_code}\n' | he
     fi
 
 
-ENV TZ=Europe/Paris
-
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone && \ 
-  apt-get update && \
-  apt-get install --yes lsb-release wget less udev sudo build-essential cmake python3 python3-dev python3-pip python3-wheel git jq libopencv-dev libpq-dev zstd usbutils && \    
-  rm -rf /var/lib/apt/lists/*
 
 ############ Install ROS2 ############
 
@@ -160,6 +154,7 @@ ENV ROS_DISTRO ${ROS2_DIST}
 WORKDIR /home/ros_user/ros2_ws/
 
 COPY ../ros2_src ./src
+
 
 RUN /bin/bash -c "source /opt/ros/$ROS_DISTRO/setup.bash && \
   apt-get update -y || true && rosdep update && \
