--- a/.devcontainer/humble_base/Dockerfile.humble
+++ b/.devcontainer/humble_base/Dockerfile.humble
@@ -36,8 +36,7 @@ RUN if [ "$(curl -L -I "${ZED_SDK_URL}" -o /dev/null -s -w '%{http_code}\n' | he
     fi
 
 
-
-############ Install ROS2 ############
+# Install ROS2
 
 # Set and Check Locale
 RUN apt-get update || true && \
@@ -60,7 +59,7 @@ RUN apt-get update || true && \
 # Install ROS 2 Base packages and Python dependencies
 RUN apt-get update || true && \
   apt-get install --no-install-recommends -y \
-  ros-${ROS2_DIST}-ros-base \
+  ros-${ROS2_DIST}-ros-base\
   python3-flake8-docstrings \
   python3-pip \
   python3-pytest-cov \
@@ -83,14 +82,6 @@ RUN colcon mixin add default \
       https://raw.githubusercontent.com/colcon/colcon-metadata-repository/master/index.yaml && \
     colcon metadata update
 
-#RUN groupadd --gid ${USER_GID} ${USERNAME} \
-    #&& useradd --uid ${USER_UID} --gid ${USER_GID} -m -s /bin/bash ${USERNAME} \
-    #&& mkdir -p /home/${USERNAME}/ros2_ws/src \
-    #&& mkdir -p /home/${USERNAME}/Documents/ZED \
-    #&& chown -R ${USERNAME}:${USERNAME} /home/${USERNAME}/ros2_ws \
-    #&& chown -R ${USERNAME}:${USERNAME} /home/${USERNAME}/Documents \
-    #&& chmod -R o+rx /usr/local/lib/python3.10/dist-packages \
-    #&& chown -R ${USERNAME}:${USERNAME} /usr/local/lib/python3.10/dist-packages
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
   ros-${ROS2_DIST}-desktop=0.10.0-1* \
@@ -114,6 +105,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
   ros-humble-ros2controlcli \
   ros-humble-ros-ign-bridge \
   ros-humble-joy-linux \
+  ros-humble-foxglove-bridge \
   ros-humble-zed-msgs \
   ros-humble-nmea-msgs \
   && rm -rf /var/lib/apt/lists/*
@@ -127,22 +119,17 @@ python3-opencv \
 python3.10-venv \
 && rm -rf /var/lib/apt/lists/*
 
-#RUN python3 -m venv /opt/venv
-#ENV PATH="/opt/venv/bin:$PATH"
-
 # Setup the ZED SDK
 RUN apt-get update -y || true && \
   apt-get install --no-install-recommends dialog bash-completion lsb-release wget less udev sudo  build-essential cmake zstd python3 python3-pip libpng-dev libgomp1 -y && \
   python3 -m pip install --upgrade pip; python3 -m pip install numpy opencv-python-headless && \
   chmod -R o+rx /usr/local/lib/python3.10/dist-packages && \
-  #chown -R ${USERNAME}:${USERNAME} /usr/local/lib/python3.10/dist-packages && \
   wget -q -O ZED_SDK_Linux_Ubuntu.run ${ZED_SDK_URL} && \
   chmod +x ZED_SDK_Linux_Ubuntu.run && \
   ./ZED_SDK_Linux_Ubuntu.run -- silent  skip_cuda && \
   ln -sf /lib/x86_64-linux-gnu/libusb-1.0.so.0 /usr/lib/x86_64-linux-gnu/libusb-1.0.so && \
   rm ZED_SDK_Linux_Ubuntu.run && \
   rm -rf /var/lib/apt/lists/*
-
 
 # Make /usr/local/zed readable and accessible for ros_user
 RUN chmod o+rx /usr
@@ -158,19 +145,9 @@ COPY ../ros2_src ./src
 
 RUN /bin/bash -c "source /opt/ros/$ROS_DISTRO/setup.bash && \
   apt-get update -y || true && rosdep update && \
-  rosdep install --from-paths src --ignore-src -r -y && \
-  colcon build --symlink-install --cmake-args=-DCMAKE_BUILD_TYPE=Release --packages-select zed_components" && \
+  rosdep install --from-paths src --ignore-src -r -y" && \ 
   rm -rf /var/lib/apt/lists/*
-  #colcon build --parallel-workers $(nproc) --symlink-install \
-  #--event-handlers console_direct+ --base-paths src \
-  #--cmake-args ' -DCMAKE_BUILD_TYPE=Release' \
-  #' -DCMAKE_LIBRARY_PATH=/usr/local/cuda/lib64/stubs' \
-  #' -DCMAKE_CXX_FLAGS="-Wl,--allow-shlib-undefined"' " && \
 
-#RUN apt-get update && apt-get install -y sudo \
-# && usermod -aG sudo ros_user \
-# && echo "ros_user ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/ros_user \
-# && chmod 0440 /etc/sudoers.d/ros_user
 
 COPY .devcontainer/humble_base/entrypoint.humble.sh /entrypoint.humble.sh
 RUN chmod +x /entrypoint.humble.sh
