--- a/ros2_src/arm_moveit_config/config/moveit_controllers.yaml
+++ b/ros2_src/arm_moveit_config/config/moveit_controllers.yaml
@@ -6,21 +6,38 @@ moveit_simple_controller_manager:
   controller_names:
     - arm_controller
     - gripper_controller
+    - arm_no_wrist_controller
+    - wrist_controller
 
   arm_controller:
     type: FollowJointTrajectory
-    action_ns: follow_joint_trajectory
-    default: true
     joints:
       - joint_axis_1
       - joint_axis_2
       - joint_axis_3
       - joint_axis_4
       - joint_axis_5
+    action_ns: follow_joint_trajectory
+    default: true
   gripper_controller:
     type: FollowJointTrajectory
-    action_ns: follow_joint_trajectory
     joints:
       - joint_finger_1
       - joint_finger_2
       - joint_finger_3
+    action_ns: follow_joint_trajectory
+  arm_no_wrist_controller:
+    type: FollowJointTrajectory
+    joints:
+      - joint_axis_1
+      - joint_axis_2
+      - joint_axis_3
+      - joint_axis_4
+    action_ns: follow_joint_trajectory
+    default: true
+  wrist_controller:
+    type: FollowJointTrajectory
+    joints:
+      - joint_axis_5
+    action_ns: follow_joint_trajectory
+    default: true
