--- a/ros2_src/arm_moveit_config/config/ros2_controllers.yaml
+++ b/ros2_src/arm_moveit_config/config/ros2_controllers.yaml
@@ -11,6 +11,14 @@ controller_manager:
       type: joint_trajectory_controller/JointTrajectoryController
 
 
+    arm_no_wrist_controller:
+      type: joint_trajectory_controller/JointTrajectoryController
+
+
+    wrist_controller:
+      type: joint_trajectory_controller/JointTrajectoryController
+
+
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
@@ -23,10 +31,9 @@ arm_controller:
       - joint_axis_4
       - joint_axis_5
     command_interfaces:
-      - position
+      []
     state_interfaces:
-      - position
-      - velocity
+      []
 gripper_controller:
   ros__parameters:
     joints:
@@ -34,7 +41,25 @@ gripper_controller:
       - joint_finger_2
       - joint_finger_3
     command_interfaces:
-      - position
+      []
     state_interfaces:
-      - position
-      - velocity
+      []
+arm_no_wrist_controller:
+  ros__parameters:
+    joints:
+      - joint_axis_1
+      - joint_axis_2
+      - joint_axis_3
+      - joint_axis_4
+    command_interfaces:
+      []
+    state_interfaces:
+      []
+wrist_controller:
+  ros__parameters:
+    joints:
+      - joint_axis_5
+    command_interfaces:
+      []
+    state_interfaces:
+      []
