--- a/ros2_src/arm_moveit_config/config/servo.yaml
+++ b/ros2_src/arm_moveit_config/config/servo.yaml
@@ -3,10 +3,10 @@ moveit_servo:
     use_sim_time: true
 
     # MoveIt info
-    move_group_name: "arm"  # Added quotes for safety
+    move_group_name: "arm_no_wrist"  # Added quotes for safety
     planning_frame: "base_link"
-    ee_frame_name: "link_5_endeff_1"
-    robot_link_command_frame: "base_link"
+    ee_frame_name: "link_4_5_1"
+    robot_link_command_frame: "link_1_2_1"  
 
     # Command input
     command_in_type: "twist_stamped"
@@ -14,7 +14,7 @@ moveit_servo:
 
     # Output / execution
     command_out_type: "trajectory_msgs/JointTrajectory"
-    command_out_topic: "/servo_node/servo_command"
+    command_out_topic: "/arm_no_wrist_controller/joint_trajectory"
     publish_command_out: true
     publish_joint_positions: true
     publish_joint_velocities: false
