--- a/ros2_src/arm_bringup/config/controllers.yaml
+++ b/ros2_src/arm_bringup/config/controllers.yaml
@@ -9,7 +9,7 @@ controller_manager:
       type: joint_trajectory_controller/JointTrajectoryController
 
     gripper_controller:
-      type: joint_trajectory_controller/JointTrajectoryController
+      type: forward_command_controller/ForwardCommandController
     
     wrist_controller:
       type: forward_command_controller/ForwardCommandController
@@ -49,24 +49,7 @@ gripper_controller:
       - joint_finger_1
       - joint_finger_2
       - joint_finger_3
-
-    command_interfaces:
-      - position
-    state_interfaces:
-      - position
-      - velocity
-
-    state_publish_rate: 50.0
-    action_monitor_rate: 20.0
-    allow_partial_joints_goal: false
-    open_loop_control: false
-
-    constraints:
-      stopped_velocity_tolerance: 0.01
-      goal_time: 0.0
-      joint_finger_1: { trajectory: 0.2, goal: 0.05 }
-      joint_finger_2: { trajectory: 0.2, goal: 0.05 }
-      joint_finger_3: { trajectory: 0.2, goal: 0.05 }
+    interface_name: position
 
 wrist_controller:
   ros__parameters:
