--- a/docker_jetson/Dockerfile.jetson
+++ b/docker_jetson/Dockerfile.jetson
@@ -30,6 +30,21 @@ COPY ./entrypoint.jetson.sh /entrypoint.jetson.sh
 RUN chmod +x /entrypoint.jetson.sh
 RUN mkdir -p /home/ros_user/ros2_ws/src && chown -R ros_user:ros_user /home/ros_user/ros2_ws
 
+
+RUN  add-apt-repository ppa:lely/ppa
+
+# utils for debugging CAN devices
+RUN apt-get update && apt-get install --no-install-recommends -y \ 
+can-utils \
+usbutils \
+kmod \
+&& rm -rf /var/lib/apt/lists/* 
+
+RUN /bin/bash -c "source /opt/ros/$ROS_DISTRO/setup.bash && \
+  apt-get update -y || true && rosdep update && \
+  rosdep install --from-paths src --ignore-src -r -y" && \ 
+  rm -rf /var/lib/apt/lists/*
+
 USER ${USERNAME}
 WORKDIR ${WS}
 
