add state estimation package

--- a/ros2_src/chassis_bringup/CMakeLists.txt
+++ b/ros2_src/chassis_bringup/CMakeLists.txt
@@ -27,4 +27,8 @@ install(DIRECTORY launch config worlds
   DESTINATION share/${PROJECT_NAME}
 )
 
+install(PROGRAMS scripts/send_gps_waypoints.py
+  DESTINATION lib/${PROJECT_NAME}
+)
+
 ament_package()
