--- a/ros2_src/chassis_bringup/package.xml
+++ b/ros2_src/chassis_bringup/package.xml
@@ -24,6 +24,23 @@
   <exec_depend>gz_ros2_control</exec_depend>
   <exec_depend>ros_gz</exec_depend>
 
+  <exec_depend>state_estimation</exec_depend>
+  <exec_depend>robot_localization</exec_depend>
+
+  <exec_depend>nav2_common</exec_depend>
+  <exec_depend>nav2_bringup</exec_depend>
+  <exec_depend>nav2_bt_navigator</exec_depend>
+  <exec_depend>nav2_controller</exec_depend>
+  <exec_depend>nav2_planner</exec_depend>
+  <exec_depend>nav2_smoother</exec_depend>
+  <exec_depend>nav2_behaviors</exec_depend>
+  <exec_depend>nav2_waypoint_follower</exec_depend>
+  <exec_depend>nav2_velocity_smoother</exec_depend>
+  <exec_depend>nav2_lifecycle_manager</exec_depend>
+  <exec_depend>nav2_costmap_2d</exec_depend>
+  <exec_depend>nav2_regulated_pure_pursuit_controller</exec_depend>
+  <exec_depend>nav2_navfn_planner</exec_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
