--- a/ros2_src/state_estimation/config/ekf_global.yaml
+++ b/ros2_src/state_estimation/config/ekf_global.yaml
@@ -17,7 +17,7 @@ ekf_global:
     # Frame configuration
     map_frame: map
     odom_frame: odom
-    base_link_frame: base_link
+    base_link_frame: base_footprint
     world_frame: map             # global filter works in the map frame
 
     publish_tf: true
