--- a/ros2_src/roboclaw/package.xml
+++ b/ros2_src/roboclaw/package.xml
@@ -4,7 +4,7 @@
   <name>roboclaw</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="Vernonicuhhh@protonmail.com">ros_user</maintainer>
+  <maintainer email="todo@todo.com">ros_user</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
