--- a/ros2_src/odrive/package.xml
+++ b/ros2_src/odrive/package.xml
@@ -4,7 +4,7 @@
   <name>odrive</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="Vernonicuhhh@protonmail.com">root</maintainer>
+  <maintainer email="todo@todo.com">root</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
